completed basic form

--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,7 @@ body {
   background-color: white;
   margin-bottom: 24px;
 }
-h1, h2, h3, h4 {
+/* h1, h2, h3, h4 {
   color: rgb(96, 130, 182)
 }
 h1 {
@@ -39,11 +39,9 @@ h1 {
 h2 {
   font-size: 1.2rem;
   margin-bottom: 1.2rem;
-}
-label {
-  display: flex;
-  justify-content: space-between;
-}
+} */
+
+
 input, select, button {
   height: 1.5rem;
   width: 150px;
